--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "jest",
-    "test-coverage": "jest --collect-coverage",
+    "coverage": "jest --collect-coverage",
+    "postinstall": "node tasks/postinstall.js || exit 0",
     "lint": "eslint src/** __tests__/**"
   },
   "repository": {
