--- a/.github/workflows/ci-master.yaml
+++ b/.github/workflows/ci-master.yaml
@@ -14,5 +14,8 @@ jobs:
         with:
           node-version: 16.x
 
+      - name: Deps
+        run: npm install
+
       - name: Test
         run: npm test
