--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "coverage": "jest --collect-coverage",
     "postinstall": "node tasks/postinstall.js || exit 0",
-    "lint": "eslint src/** __tests__/**"
+    "lint": "eslint src/** tests/**"
   },
   "repository": {
     "type": "git",
