--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "cheerio": "^1.0.0-rc.11",
     "fast-xml-parser": "^4.0.8",
     "node-fetch": "^3.2.6",
+    "random-useragent": "^0.5.0",
     "puppeteer": "^14.3.0"
   },
   "devDependencies": {
@@ -51,7 +52,9 @@
     "testPathIgnorePatterns": [
       "<rootDir>/tests/fixtures/"
     ],
-    "moduleFileExtensions": ["js"],
+    "moduleFileExtensions": [
+      "js"
+    ],
     "verbose": false
   }
 }
