--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "scrapa",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "description": "Scrape Parse Transform Repeat",
   "main": "./src/scrapa.js",
   "type": "module",
@@ -27,9 +27,10 @@
   "dependencies": {
     "cheerio": "^1.0.0-rc.12",
     "fast-xml-parser": "^4.4.0",
+    "json-2-csv": "^5.5.1",
     "node-fetch": "^3.3.2",
-    "random-useragent": "^0.5.0",
-    "puppeteer": "^22.11.2"
+    "puppeteer": "^22.11.2",
+    "random-useragent": "^0.5.0"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.24.7",
